--- a/frontend/admin/src/index.html
+++ b/frontend/admin/src/index.html
@@ -12,8 +12,7 @@
 
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><!--
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-light_blue.min.css">-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <style>
     #view-source {
       position: fixed;
@@ -33,9 +32,6 @@
       -ms-user-select: none;
     }
   </style>
-  <script src='http://cdn.tinymce.com/4/tinymce.min.js'></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"
-          integrity="sha256-fQOizuxGMT1DCcF0rU6EK8zQM6TwsSWGTHjL5UpxLlU=" crossorigin="anonymous"></script>
 </head>
 <body>
 
