--- a/plugins/js/university_explorer.html
+++ b/plugins/js/university_explorer.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" type="text/css" href="csyllabus_js_plugins.css">
-<div id="csyllabus-similar-courses-plugin" data-courseId="1"></div>
+<div id="csyllabus-institution-explorer-plugin" data-universityId="1"></div>
 <script src="csyllabus_js_plugins.js"></script>
 <script>
     document.onreadystatechange = function () {
-        "interactive" === document.readyState && ssc()
+        "interactive" === document.readyState && serp()
     };
 </script>
