--- a/frontend/csyllabus/src/index.html
+++ b/frontend/csyllabus/src/index.html
@@ -15,7 +15,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
-
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   <script type="text/javascript">
     angular.module('CSyllabus', ['ngMaterial']);
   </script>
